src/main/java/com/example/demo/error/UserNotFoundException.java
package com.example.demo.error;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(String msg){
        super(msg);
    }
}
